--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
-  "name": "y",
+  "name": "new",
   "version": "1.0.0",
   "description": "First",
   "main": "y",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-jslint": "^1.0.1",
+    "gulp-main-bower-files": "^1.4.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-notify-growl": "^1.0.2",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.1.0",
+    "jslint": "^0.9.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/manishz90/Learn.git"
+  }
 }
